
[workspace]
resolver = "2"
members = ["day01", "day02", "day03", "day04", "day05", "day06", "day07", "day08"]

[build]
rustflags = ["-C", "target-cpu=native"]

[profile.release]
debug = true

[workspace.metadata.aoch]
year = 2023

[patch."https://github.com/chrismooredev/aochelper"]
aoch = { path = "../aochelper" }
