[package]
name = "day01"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
itertools = "0.12.0"
thiserror = "1.0.50"
regex = "1.10.2"
lazy_static = "1.4.0"
aoch = { git = "https://github.com/chrismooredev/aochelper" }
