[package]
name = "day04"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
itertools = "0.10.5"
thiserror = "1.0.38"
log = "0.4.17"
test-log = "0.2.11"
aoch = { git = "https://github.com/chrismooredev/aochelper", default-features = false }
